# Maze-Project

./: 03_event_driven_programming.cpp  04_key_press.cpp  05_optimized_surface_load.cpp  06_extension_libraries.cpp  06_extension_libraries_and_loading_other_image_formats.cpp  07_texture_loading_and_rendering.cpp  08_geometry_rendering.cpp  09_the_viewport.cpp  10_color_keying.cpp  11_clip_rendering.cpp  12_color_modulation.cpp  13_alpha_bending.cpp  14_animated_sprites_and_vsync.cpp  15_rotation_and_flipping.cpp  16_true_type_fonts.cpp  CMakeLists.txt  s  sdl_program  tempo.cc
output/: 03_event_driven  03_event_driven_programming  04_key_press  05_optimized_surface_load  06_extension_libraries_and_loading_other_image_formats  07_texture_loading_and_rendering  08_geometry_rendering  09_the_viewport  10_color_keying  11_clip_rendering  12_color_modulation  13_alpha_bending  14_animated_sprites_and_vsync  15_rotation_and_flipping  16_true_type_fonts  tempo  tempo2
~/: .bashrc
